# productsentiment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  _version.py  config.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: test.yml
insights/: __init__.py  extractor.py
productreviews/: __init__.py
scripts/: quickstart.sh
sentiment/: __init__.py  analyzer.py
sources/: __init__.py  base.py  duckduckgo_source.py  hackernews_source.py  reddit_source.py  web_search_source.py
tests/: __init__.py  test_smoke.py
utils/: __init__.py  cache.py  dedupe.py  fetch.py  logging.py  text.py
